# Learning_Rust

./: PROJECT.md  README.md  Rust_Outline_to_learning.md  W1SESSION1.md  W1SESSION2.md  W2SESSION1.md  W2SESSION2.md  W3SESSION1.md  W3SESSION2.md  W4SESSION1.md  W4SESSION2.md  W5SESSION1.md  W5SESSION2.md  W6SESSION1.md  W6SESSION2.md  W7SESSION1.md  W7SESSION2.md
rust_mysql_crud/: .env  Cargo.toml  diesel.toml
rust_mysql_crud/migrations/2024-10-10-165759_create_users_table/: up.sql
rust_mysql_crud/src/: db.rs  handlers.rs  main.rs  models.rs  schema.rs
rust_mysql_crud/src/tests/: integration_test.rs
rust_mysql_crud/static/: app.js  index.html
