[package]
name = "rust_mysql_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.6"
actix-files = "0.6"
diesel = { version = "2.0.0", features = ["mysql"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.2", features = ["serde", "v4"] }
hex = "0.4"
env_logger = "0.10"